--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ License: CC BY 4.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+URL: https://github.com/matcasti/thirdclass
+BugReports: https://github.com/matcasti/thirdclass/issues
