--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,12 @@
 Package: thirdclass
-Title: Renato Class
+Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    c(
-      person("Renato", "Borras", , "rborras@gmail.com", role = c("aut", "cre"),
-           comment = c(ORCID = "1234-2345-3456-4567")),
-      person("Matías", "Castillo", , "matcasti@gmail.com", role = c("aut"),
-           comment = c(ORCID = "1234-2345-3456-4567"))
-    )
+    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+           comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 License: CC BY 4.0
 Encoding: UTF-8
+LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
-URL: https://github.com/matcasti/thirdclass
-BugReports: https://github.com/matcasti/thirdclass/issues
+RoxygenNote: 7.1.1
